Avoid deprecated number constructors on JDK 9
Issue: SPR-13344